--- a/008 - PYTORCH.ipynb
+++ b/008 - PYTORCH.ipynb
@@ -26,9 +26,187 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "import torch.nn.functional as F\n",
+        "from torchvision import datasets, transforms\n",
+        "from torch.utils.data import DataLoader\n",
+        "import matplotlib.pyplot as plt"
+      ],
       "metadata": {
         "id": "_H-_7hNBZYpf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "print(\"Using device:\", device)"
+      ],
+      "metadata": {
+        "id": "tFojzDOjFW2Z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "transform = transforms.Compose([\n",
+        "    transforms.ToTensor(),        # Converts to tensor, scales 0–255 → 0–1\n",
+        "    transforms.Normalize((0.5,), (0.5,))  # Normalize grayscale images\n",
+        "])\n",
+        "\n",
+        "train_dataset = datasets.MNIST(\n",
+        "    root=\"./data\",\n",
+        "    train=True,\n",
+        "    download=True,\n",
+        "    transform=transform\n",
+        ")\n",
+        "\n",
+        "test_dataset = datasets.MNIST(\n",
+        "    root=\"./data\",\n",
+        "    train=False,\n",
+        "    download=True,\n",
+        "    transform=transform\n",
+        ")\n",
+        "\n",
+        "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+        "test_loader  = DataLoader(test_dataset, batch_size=64, shuffle=False)"
+      ],
+      "metadata": {
+        "id": "oGs5zegiHPm7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class SimpleCNN(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(SimpleCNN, self).__init__()\n",
+        "\n",
+        "        self.conv1 = nn.Conv2d(1, 32, kernel_size=3)\n",
+        "        self.pool = nn.MaxPool2d(2, 2)\n",
+        "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3)\n",
+        "\n",
+        "        self.fc1 = nn.Linear(64 * 5 * 5, 64)\n",
+        "        self.fc2 = nn.Linear(64, 10)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = F.relu(self.conv1(x))    # Output: [batch, 32, 26, 26]\n",
+        "        x = self.pool(x)             # Output: [batch, 32, 13, 13]\n",
+        "\n",
+        "        x = F.relu(self.conv2(x))    # Output: [batch, 64, 11, 11]\n",
+        "        x = self.pool(x)             # Output: [batch, 64, 5, 5]\n",
+        "\n",
+        "        x = x.view(-1, 64 * 5 * 5)   # Flatten\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = self.fc2(x)\n",
+        "        return x\n",
+        "\n",
+        "model = SimpleCNN().to(device)\n",
+        "print(model)"
+      ],
+      "metadata": {
+        "id": "iw_N4EMiHbf-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "criterion = nn.CrossEntropyLoss()\n",
+        "optimizer = optim.Adam(model.parameters(), lr=0.001)"
+      ],
+      "metadata": {
+        "id": "22i745ysHjlL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "epochs = 10\n",
+        "for epoch in range(epochs):\n",
+        "    running_loss = 0.0\n",
+        "\n",
+        "    for images, labels in train_loader:\n",
+        "        images, labels = images.to(device), labels.to(device)\n",
+        "\n",
+        "        optimizer.zero_grad()\n",
+        "\n",
+        "        outputs = model(images)\n",
+        "        loss = criterion(outputs, labels)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "        running_loss += loss.item()\n",
+        "\n",
+        "    print(f\"Epoch [{epoch+1}/{epochs}], Loss: {running_loss/len(train_loader):.4f}\")\n",
+        "\n",
+        "print(\"Training completed!\")"
+      ],
+      "metadata": {
+        "id": "dHlaJfkgHoty"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.eval()\n",
+        "correct = 0\n",
+        "total = 0\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "    for images, labels in test_loader:\n",
+        "        images, labels = images.to(device), labels.to(device)\n",
+        "\n",
+        "        outputs = model(images)\n",
+        "        _, predicted = torch.max(outputs.data, 1)\n",
+        "\n",
+        "        total += labels.size(0)\n",
+        "        correct += (predicted == labels).sum().item()\n",
+        "\n",
+        "print(f\"\\nTest Accuracy: {100 * correct / total:.2f}%\")"
+      ],
+      "metadata": {
+        "id": "9QFX5XyJHtSd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "examples = enumerate(test_loader)\n",
+        "batch_idx, (example_data, example_targets) = next(examples)\n",
+        "\n",
+        "example_data = example_data.to(device)\n",
+        "output = model(example_data)\n",
+        "\n",
+        "plt.figure(figsize=(10, 4))\n",
+        "for i in range(10):\n",
+        "    plt.subplot(2, 5, i+1)\n",
+        "    img = example_data[i].cpu().squeeze()\n",
+        "    plt.imshow(img, cmap='gray')\n",
+        "    pred = output[i].argmax().item()\n",
+        "    plt.title(f\"Pred: {pred}\")\n",
+        "    plt.axis('off')\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "rQNwGrS8Hwau"
       },
       "execution_count": null,
       "outputs": []
