--- a/008 - PYTORCH.ipynb
+++ b/008 - PYTORCH.ipynb
@@ -39,7 +39,7 @@
       "metadata": {
         "id": "_H-_7hNBZYpf"
       },
-      "execution_count": 17,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -53,9 +53,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tFojzDOjFW2Z",
-        "outputId": "3570eb37-fd57-48dc-a230-e674eebc3e43"
+        "outputId": "98774a73-8387-4943-b02c-4ca4d99b381d"
       },
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,10 +92,25 @@
         "test_loader  = DataLoader(test_dataset, batch_size=64, shuffle=False)"
       ],
       "metadata": {
-        "id": "oGs5zegiHPm7"
+        "id": "oGs5zegiHPm7",
+        "outputId": "73ef70bd-9964-44f0-c360-401f699c4e5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 19,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 9.91M/9.91M [00:00<00:00, 12.8MB/s]\n",
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 342kB/s]\n",
+            "100%|██████████| 1.65M/1.65M [00:00<00:00, 3.20MB/s]\n",
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 8.27MB/s]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -131,9 +146,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iw_N4EMiHbf-",
-        "outputId": "84471403-a52a-4e32-c63d-90da249f8034"
+        "outputId": "53c191d7-ed03-4fcf-e8d6-f93a518b63ae"
       },
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +174,7 @@
       "metadata": {
         "id": "22i745ysHjlL"
       },
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -190,24 +205,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dHlaJfkgHoty",
-        "outputId": "8d97cb30-1435-4512-fd08-797cefda139a"
+        "outputId": "faf76eb4-8f19-4bf6-8c9f-15048eeb4433"
       },
-      "execution_count": 22,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch [1/10], Loss: 0.1623\n",
-            "Epoch [2/10], Loss: 0.0500\n",
-            "Epoch [3/10], Loss: 0.0356\n",
-            "Epoch [4/10], Loss: 0.0257\n",
-            "Epoch [5/10], Loss: 0.0208\n",
-            "Epoch [6/10], Loss: 0.0158\n",
-            "Epoch [7/10], Loss: 0.0126\n",
-            "Epoch [8/10], Loss: 0.0101\n",
-            "Epoch [9/10], Loss: 0.0110\n",
-            "Epoch [10/10], Loss: 0.0071\n",
+            "Epoch [1/10], Loss: 0.1731\n",
+            "Epoch [2/10], Loss: 0.0508\n",
+            "Epoch [3/10], Loss: 0.0350\n",
+            "Epoch [4/10], Loss: 0.0263\n",
+            "Epoch [5/10], Loss: 0.0211\n",
+            "Epoch [6/10], Loss: 0.0162\n",
+            "Epoch [7/10], Loss: 0.0125\n",
+            "Epoch [8/10], Loss: 0.0114\n",
+            "Epoch [9/10], Loss: 0.0083\n",
+            "Epoch [10/10], Loss: 0.0084\n",
             "Training completed!\n"
           ]
         }
@@ -237,16 +252,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9QFX5XyJHtSd",
-        "outputId": "efd5f134-9df6-47c7-92a1-4f1da8f1ff27"
+        "outputId": "58d26c5e-d632-41d5-b765-2f24a959e341"
       },
-      "execution_count": 23,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Test Accuracy: 98.98%\n"
+            "Test Accuracy: 99.01%\n"
           ]
         }
       ]
@@ -277,9 +292,9 @@
           "height": 360
         },
         "id": "rQNwGrS8Hwau",
-        "outputId": "58a622f7-88c3-4247-8e1d-5d3ba7f87be8"
+        "outputId": "a3514969-5956-4b06-de56-7fc00b6c19f3"
       },
-      "execution_count": 24,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -301,7 +316,7 @@
       "metadata": {
         "id": "qxcbxkcIP8Xe"
       },
-      "execution_count": 25,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -360,13 +375,13 @@
       ],
       "metadata": {
         "id": "nMa3o65qOepa",
-        "outputId": "04bf892c-562c-4917-e09b-66f324e56c41",
+        "outputId": "5454c0ea-833d-40ac-a771-5a4d158e6ff2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 463
         }
       },
-      "execution_count": 26,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -382,18 +397,18 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Predicted Digit: 8\n"
+            "Predicted Digit: 2\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "8"
+              "2"
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 28
         }
       ]
     }
